@@ -6,3 +6,4 @@
 *.swp
 *.swo
 *.tgz
+.build
