@@ -10,11 +10,17 @@
 [Collect / KEYWORDS]
 command = keyword
 
-[Collect / OPTIONS]
-command = option
+[Generic / OPTIONS]
 
-[Collect / ATTRIBUTES]
-command = attr
+[Collect / General Options]
+header_comment = head2
+new_command = head3
+command = gen_option
+
+[Collect / Directory Options]
+header_comment = head2
+new_command = head3
+command = dir_option
 
 [Generic / CONFIGURATION]
 [Requires]
